# nixified-django

./: .gitignore  Dockerfile  flake.nix  manage.py  pyproject.toml
.github/workflows/: docker.yml
home/: urls.py  views.py
nixified/: asgi.py  settings.py  urls.py  wsgi.py
