[project]
name = "nixified-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "granian[pname,uvloop]>=2.6.1",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
include = ["nixified*", "home*"]
